--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     background-color: #000;
     margin: 0px;
     padding: 0px;
-    background-image: url(../images/LittleSnowHills.jpg);
+    background-image: url(images/LittleSnowHills.jpg);
     background-position: 50% 50%;
     background-attachment: fixed;
 	font-family: sans-serif;
@@ -51,7 +51,7 @@ body #content ul li {
 }
 
 body #content ul li.baizley {
-    background: url(../images/johnbaizley_Tat.jpg);
+    background: url(images/johnbaizley_Tat.jpg);
 }
 
 body #content ul li.gradient {
