--- a/css/core.css
+++ b/css/core.css
@@ -1,157 +1,301 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font: inherit;
-  font-size: 100%;
-  vertical-align: baseline;
-  outline: none;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font: inherit;
+	font-size: 100%;
+	vertical-align: baseline;
+	outline: none;
 }
 
 html {
-  line-height: 1;
+	line-height: 1;
 }
 
-ol, ul {
-  list-style: none;
+ol,
+ul {
+	list-style: none;
 }
 
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
-caption, th, td {
-  text-align: left;
-  font-weight: normal;
-  vertical-align: middle;
+caption,
+th,
+td {
+	text-align: left;
+	font-weight: normal;
+	vertical-align: middle;
 }
 
-q, blockquote {
-  quotes: none;
+q,
+blockquote {
+	quotes: none;
 }
 
-q:before, q:after, blockquote:before, blockquote:after {
-  content: "";
-  content: none;
+q:before,
+q:after,
+blockquote:before,
+blockquote:after {
+	content: "";
+	content: none;
 }
-
 
 a img {
-  border: none;
+	border: none;
 }
 
-article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
-  display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+menu,
+nav,
+section,
+summary {
+	display: block;
 }
 
 a {
-  outline: none;
+	outline: none;
 }
 
-a, button, input {
-  -webkit-tap-highlight-color: rgba(255, 0, 0, 0);
+a,
+button,
+input {
+	-webkit-tap-highlight-color: rgba(255, 0, 0, 0);
 }
-
 
 * {
-  -webkit-transition-timing-function: ease-in-out;
-  -moz-transition-timing-function: ease-in-out;
-  -ms-transition-timing-function: ease-in-out;
-  -o-transition-timing-function: ease-in-out;
-  transition-timing-function: ease-in-out;
-  box-sizing:border-box;
+	-webkit-transition-timing-function: ease-in-out;
+	-moz-transition-timing-function: ease-in-out;
+	-ms-transition-timing-function: ease-in-out;
+	-o-transition-timing-function: ease-in-out;
+	transition-timing-function: ease-in-out;
+	box-sizing: border-box;
 }
-
 
 html {
-  font-size: 50px;
+	font-size: 50px;
 }
 
-
-html, body {
-  width: 100%;
-  height: 100%;
-  font-family: Microsoft YaHei,Arial, sans-serif;
-  background:url(../images/preload/bg.jpg) no-repeat;
-  background-size:100% 100%;
+html,
+body {
+	width: 100%;
+	height: 100%;
+	font-family: Microsoft YaHei, Arial, sans-serif;
+	background: url(../images/preload/bg.jpg) no-repeat;
+	background-size: 100% 100%;
 }
 
-
-img{
-  display: block;
-  border: none;
-  width: 100%;
-}
-.loading{ 
-  width: 100%;
-  height: 100%;
-  position: relative;
-  text-align: center;
-  
-  
-} 
-
-.loading .loadimg{
-display: block;
-  position: absolute;
-  top: 39%;
-  left: 50%;
-  margin-left: -1.25rem;
-  width: 2.5rem;
-  height: 2.5rem;
+img {
+	display: block;
+	border: none;
+	width: 100%;
 }
 
-.loading .loadimg img{
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-  z-index: 1;
+.loading {
+	width: 100%;
+	height: 100%;
+	position: relative;
+	text-align: center;
 }
 
-.loading .count{
-  display: block;
-  z-index: 100;
-  position: absolute;
-  left: 50%;
-  margin-left: -0.3rem;
-  margin-top: -0.5rem;
-  height: 0.25rem;
-  line-height: 0;
+.loading .loadimg {
+	display: block;
+	position: absolute;
+	top: 39%;
+	left: 50%;
+	margin-left: -1.25rem;
+	width: 2.5rem;
+	height: 2.5rem;
 }
 
-.loading #number{
-	font-family:Garamond Italic;
-	font-weight:bold;
-   font-size: 0.4rem;
-  width: 0.6rem;
-  color: rgb(98, 43,24);
+.loading .loadimg img {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: block;
+	z-index: 1;
 }
-.s1 .t1{position: absolute;left: 1.35rem;top:0.6rem;font-size:0.45rem;color:#733521;margin:0;}
-.s1 .banner{position: absolute;left:0;width:6.4rem;height:2.09rem;overflow:hidden;}
-.s1 .banner p{position: absolute;font-size:0.3rem;top:0.85rem;}
-.s1 .banner img{position: absolute;}
-.s1 .b1{top:1.3rem;}
-.s1 .b1 p{left:0.48rem;}
-.s1 .b1 img{margin-left:1.64rem;}
-.s1 .b2{top:3.85rem;}
-.s1 .b2 p{left:5.33rem;}
-.s1 .b2 img{margin-left:-1.26rem;}
-.s1 .b3{top:6.4rem;}
-.s1 .b3 p{left:0.48rem;}
-.s1 .b3 img{margin-left:1.64rem;}
+
+.loading .count {
+	display: block;
+	z-index: 100;
+	position: absolute;
+	left: 50%;
+	margin-left: -0.3rem;
+	margin-top: -0.5rem;
+	height: 0.25rem;
+	line-height: 0;
+}
+
+.loading #number {
+	font-family: Garamond Italic;
+	font-weight: bold;
+	font-size: 0.4rem;
+	width: 0.6rem;
+	color: rgb(98, 43, 24);
+}
+
+.menu {
+	background: url(../images/menu.jpg) no-repeat;
+	background-size: 100% 100%;
+	width: 4.7rem;
+	position: absolute;
+	left: 0;
+	top: 0;
+	bottom: 0;
+}
+
+.s1 .t1 {
+	position: absolute;
+	left: 1.35rem;
+	top: 0.6rem;
+	font-size: 0.45rem;
+	color: #733521;
+	margin: 0;
+}
+
+.s1 .banner {
+	position: absolute;
+	left: 0;
+	width: 6.4rem;
+	height: 2.09rem;
+	overflow: hidden;
+}
+
+.s1 .banner p {
+	position: absolute;
+	font-size: 0.3rem;
+	top: 0.85rem;
+}
+
+.s1 .banner img {
+	position: absolute;
+}
+
+.s1 .b1 {
+	top: 1.3rem;
+}
+
+.s1 .b1 p {
+	left: 0.48rem;
+}
+
+.s1 .b1 img {
+	margin-left: 1.64rem;
+}
+
+.s1 .b2 {
+	top: 3.85rem;
+}
+
+.s1 .b2 p {
+	left: 5.33rem;
+}
+
+.s1 .b2 img {
+	margin-left: -1.26rem;
+}
+
+.s1 .b3 {
+	top: 6.4rem;
+}
+
+.s1 .b3 p {
+	left: 0.48rem;
+}
+
+.s1 .b3 img {
+	margin-left: 1.64rem;
+}
