--- a/css/core.css
+++ b/css/core.css
@@ -1,84 +1,4 @@
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -87,72 +7,40 @@ video {
 	vertical-align: baseline;
 	outline: none;
 }
-
 html {
 	line-height: 1;
 }
-
-ol,
-ul {
+ol, ul {
 	list-style: none;
 }
-
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
-caption,
-th,
-td {
+caption, th, td {
 	text-align: left;
 	font-weight: normal;
 	vertical-align: middle;
 }
-
-q,
-blockquote {
+q, blockquote {
 	quotes: none;
 }
-
-q:before,
-q:after,
-blockquote:before,
-blockquote:after {
+q:before, q:after, blockquote:before, blockquote:after {
 	content: "";
 	content: none;
 }
-
 a img {
 	border: none;
 }
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-menu,
-nav,
-section,
-summary {
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
 	display: block;
 }
-
 a {
 	outline: none;
 }
-
-a,
-button,
-input {
+a, button, input {
 	-webkit-tap-highlight-color: rgba(255, 0, 0, 0);
 }
-
 * {
 	-webkit-transition-timing-function: ease-in-out;
 	-moz-transition-timing-function: ease-in-out;
@@ -161,33 +49,27 @@ input {
 	transition-timing-function: ease-in-out;
 	box-sizing: border-box;
 }
-
 html {
 	font-size: 50px;
 }
-
-html,
-body {
+html, body {
 	width: 100%;
 	height: 100%;
 	font-family: Microsoft YaHei, Arial, sans-serif;
 	background: url(../images/preload/bg.jpg) no-repeat;
 	background-size: 100% 100%;
 }
-
 img {
 	display: block;
 	border: none;
 	width: 100%;
 }
-
 .loading {
 	width: 100%;
 	height: 100%;
 	position: relative;
 	text-align: center;
 }
-
 .loading .loadimg {
 	display: block;
 	position: absolute;
@@ -197,7 +79,6 @@ img {
 	width: 2.5rem;
 	height: 2.5rem;
 }
-
 .loading .loadimg img {
 	width: 100%;
 	height: 100%;
@@ -207,7 +88,6 @@ img {
 	display: block;
 	z-index: 1;
 }
-
 .loading .count {
 	display: block;
 	z-index: 100;
@@ -218,7 +98,6 @@ img {
 	height: 0.25rem;
 	line-height: 0;
 }
-
 .loading #number {
 	font-family: Garamond Italic;
 	font-weight: bold;
@@ -226,17 +105,31 @@ img {
 	width: 0.6rem;
 	color: rgb(98, 43, 24);
 }
-
 .menu {
 	background: url(../images/menu.jpg) no-repeat;
 	background-size: 100% 100%;
 	width: 4.7rem;
 	position: absolute;
-	left: 0;
+	left: -4.7rem;
 	top: 0;
 	bottom: 0;
+	transition: all 0.25s;
 }
-
+.menu  .logo {
+	position: absolute;
+	left: 0.5rem;
+	top: 0.44rem;
+	width: 1.63rem;
+}
+.menu  .btn {
+	position: absolute;
+	left: 4.67rem;
+	top: 0.28rem;
+	width: 0.57rem;
+}
+#tm:checked ~ .menu {
+	transform: translateX(4.7rem);
+}
 .s1 .t1 {
 	position: absolute;
 	left: 1.35rem;
@@ -245,7 +138,6 @@ img {
 	color: #733521;
 	margin: 0;
 }
-
 .s1 .banner {
 	position: absolute;
 	left: 0;
@@ -253,49 +145,38 @@ img {
 	height: 2.09rem;
 	overflow: hidden;
 }
-
 .s1 .banner p {
 	position: absolute;
 	font-size: 0.3rem;
 	top: 0.85rem;
 }
-
 .s1 .banner img {
 	position: absolute;
 }
-
 .s1 .b1 {
 	top: 1.3rem;
 }
-
 .s1 .b1 p {
 	left: 0.48rem;
 }
-
 .s1 .b1 img {
 	margin-left: 1.64rem;
 }
-
 .s1 .b2 {
 	top: 3.85rem;
 }
-
 .s1 .b2 p {
 	left: 5.33rem;
 }
-
 .s1 .b2 img {
 	margin-left: -1.26rem;
 }
-
 .s1 .b3 {
 	top: 6.4rem;
 }
-
 .s1 .b3 p {
 	left: 0.48rem;
 }
-
 .s1 .b3 img {
 	margin-left: 1.64rem;
 }
